fix: change cors to allow frontend and mobile to send requests